--- a/menu.html
+++ b/menu.html
@@ -22,10 +22,10 @@
             <ul>
                 <li><a href="accueil.html">Accueil</a></li>
                 <li><a href="menu.html">Menu</a></li>
-                <li><a href="#">Spécials</a></li>
-                <li><a href="#">Commander</a></li>
-                <li><a href="#">Restaurant</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="special.html">Spécials</a></li>
+                <li><a href="commande.html">Commander</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="inscription.html">Inscrivez Vous!</a></li>
             </ul>
         </nav>
     </header>
