--- a/accueil.html
+++ b/accueil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil - Nom du Restaurant</title>
+    <title>Accueil - L'Expérience</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/Style.css">
 </head>
@@ -12,7 +12,7 @@
     <header>
         <!-- Logo -->
         <div>
-            <a href="accueil.html"><img src="https://static.showit.co/800/cKPQwZkpQmeo1WHUOQ-sxQ/55130/lf_logo_monogram_simple.png" alt="Logo du restaurant"></a>
+            <a href="accueil.html"><img src="https://static.showit.co/800/cKPQwZkpQmeo1WHUOQ-sxQ/55130/lf_logo_monogram_simple.png" alt="Logo du restaurant L'Expérience"></a>
         </div>
         <!-- Navigation -->
         <nav>
@@ -28,13 +28,13 @@
     </header>
     <main>
         <!-- Main content goes here -->
-        <h1>Bienvenue au Restaurant LE</h1>
+        <h1>Bienvenue au Restaurant L'Expérience</h1>
         <img src="https://tse2.mm.bing.net/th?id=OIP.bXx32dwx1ruMXzlUKJquAQHaE8&pid=Api&P=0&h=180" alt="Restaurant View">
         <p>Découvrez nos plats et saveurs uniques.</p>
         <!-- Add more content here -->
     </main>
     <footer>
-        &copy; 2023 Luccin Eric
+        &copy;L'Expérience 2023 Luccin Eric
     </footer>
 </body>
 </html>
