--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact nom du restaurant</title>
+    <title>Contact - L'Expérience</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div>
-            <a href="accueil.html"><img src="#" alt="logo du restaurant"></a>
+            <a href="accueil.html"><img src="#" alt="logo du restaurant L'Expérience"></a>
         </div>
 
         <ul>
@@ -29,7 +29,7 @@
     </main>
 
     <footer>
-        &copy; nom du restaurant
+        &copy; L'Expérience 2023 Luccin Eric
     </footer>
 
 </body>
