--- a/inscription.html
+++ b/inscription.html
@@ -15,14 +15,15 @@
             <a href="accueil.html"><img src="https://static.showit.co/800/cKPQwZkpQmeo1WHUOQ-sxQ/55130/lf_logo_monogram_simple.png" alt="Logo du restaurant"></a>
         </div>
 
-        <ul>
-            <li><a href="accueil.html">Accueil</a></li>
+        <nav>
+            <ul>
+                <li><a href="accueil.html">Accueil</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="special.html">Spécials</a></li>
-                <li><a href="commande.html">Commander</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="inscription.html">Inscrivez Vous!</a></li>
-        </ul>
+            </ul>
+        </nav>
 
     </header>
 
