--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu - Nom du Restaurant</title>
+    <title>Menu - L'Expérience</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/Style.css">
     <style>
@@ -23,7 +23,6 @@
                 <li><a href="accueil.html">Accueil</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="special.html">Spécials</a></li>
-                <li><a href="commande.html">Commander</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="inscription.html">Inscrivez Vous!</a></li>
             </ul>
@@ -138,7 +137,7 @@
     </main>
 
     <footer>
-        &copy; nom du restaurant
+        &copy; L'Expérience 2023 Luccin Eric
     </footer>
 
 </body>
