--- a/special.html
+++ b/special.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nom du restaurant</title>
+    <title>Spécial - L'Expérience</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div>
-            <a href="accueil.html"><img src="#" alt="logo du restaurant"></a>
+            <a href="accueil.html"><img src="https://static.showit.co/800/cKPQwZkpQmeo1WHUOQ-sxQ/55130/lf_logo_monogram_simple.png" alt="Logo du restaurant"></a>
         </div>
 
-        <ul>
-            <li><a href="menu.html">Menu</a></li>
-            <li><a href="special.html">Spécials</a></li>
-            <li><a href="commande.html">Commander</a></li>
-            <li><a href="locations.html">restaurant</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="special.html">Spécials</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="inscription.html">Inscrivez Vous!</a></li>
+            </ul>
+        </nav>
 
     </header>
 
@@ -28,7 +30,7 @@
     </main>
 
     <footer>
-        &copy; nom du restaurant
+        &copy; L'Expérience 2023 Luccin Eric
     </footer>
 
 </body>
