--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu - L'Expérience</title>
+    <title>Menu - Nom du Restaurant</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/Style.css">
     <style>
@@ -22,9 +22,10 @@
             <ul>
                 <li><a href="accueil.html">Accueil</a></li>
                 <li><a href="menu.html">Menu</a></li>
-                <li><a href="special.html">Spécials</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="inscription.html">Inscrivez Vous!</a></li>
+                <li><a href="#">Spécials</a></li>
+                <li><a href="#">Commander</a></li>
+                <li><a href="#">Restaurant</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -137,7 +138,7 @@
     </main>
 
     <footer>
-        &copy; L'Expérience 2023 Luccin Eric
+        &copy; nom du restaurant
     </footer>
 
 </body>
