--- a/accueil.html
+++ b/accueil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil - L'Expérience</title>
+    <title>Accueil - Nom du Restaurant</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/Style.css">
 </head>
@@ -12,28 +12,29 @@
     <header>
         <!-- Logo -->
         <div>
-            <a href="accueil.html"><img src="https://static.showit.co/800/cKPQwZkpQmeo1WHUOQ-sxQ/55130/lf_logo_monogram_simple.png" alt="Logo du restaurant L'Expérience"></a>
+            <a href="accueil.html"><img src="https://static.showit.co/800/cKPQwZkpQmeo1WHUOQ-sxQ/55130/lf_logo_monogram_simple.png" alt="Logo du restaurant"></a>
         </div>
         <!-- Navigation -->
         <nav>
             <ul>
                 <li><a href="accueil.html">Accueil</a></li>
                 <li><a href="menu.html">Menu</a></li>
-                <li><a href="special.html">Spécials</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="inscription.html">Inscrivez Vous!</a></li>
+                <li><a href="#">Spécials</a></li>
+                <li><a href="#">Commander</a></li>
+                <li><a href="#">Restaurant</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <!-- Main content goes here -->
-        <h1>Bienvenue au Restaurant L'Expérience</h1>
+        <!-- Le contenue Principal -->
+        <h1>Bienvenue au Restaurant LE</h1>
         <img src="https://tse2.mm.bing.net/th?id=OIP.bXx32dwx1ruMXzlUKJquAQHaE8&pid=Api&P=0&h=180" alt="Restaurant View">
         <p>Découvrez nos plats et saveurs uniques.</p>
-        <!-- Add more content here -->
+        
     </main>
     <footer>
-        &copy;L'Expérience 2023 Luccin Eric
+        &copy; 2023 Luccin Eric
     </footer>
 </body>
 </html>
