--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,35 @@
     </header>
 
     <main>
-
+        <h1>Contactez Nous!</h1>
+        <form class="formulaire_contact">
+            <div>
+                <label for="sujet">Sujet</label>
+            </div>
+            <div>
+                <input class="input_sujet" type="text" id="sujet" name="Sujet" placeholder="Sujet">
+            </div>
+            <div>
+                <label for="message">Message</label>
+            </div>
+            <div>
+                <textarea name="message" id="message" placeholder="Votre Message"></textarea>
+            </div>
+            <div>
+                <input class="bouton_envoyer" type="submit" name="Envoyer">
+            </div>
+        </form>
     </main>
 
     <footer>
+        <p>L'Expérience Novembre 2023</p>
+        <p><a href="https://github.com/eric4231/Projet-UA2.git">Lien vers le Git</a></p>
+        
         &copy; L'Expérience 2023 Luccin Eric
     </footer>
+
+</body>
+</html>
 
 </body>
 </html>
