--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - L'Expérience</title>
+    <link rel="icon" type="image/png" href="https://static.showit.co/800/cKPQwZkpQmeo1WHUOQ-sxQ/55130/lf_logo_monogram_simple.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -42,7 +43,7 @@
                 <textarea name="message" id="message" placeholder="Votre Message"></textarea>
             </div>
             <div>
-                <input class="bouton_envoyer" type="submit" name="Envoyer">
+                <button class="bouton_envoyer" type="button">Envoyer</button>
             </div>
         </form>
     </main>
@@ -57,5 +58,3 @@
 </body>
 </html>
 
-</body>
-</html>
