--- a/accueil.html
+++ b/accueil.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil - Nom du Restaurant</title>
+    <link rel="icon" type="image/png" href="https://static.showit.co/800/cKPQwZkpQmeo1WHUOQ-sxQ/55130/lf_logo_monogram_simple.png">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/Style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -18,23 +19,27 @@
         <nav>
             <ul>
                 <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="notrehistoire.html">Notre Histoire</a></li>
                 <li><a href="menu.html">Menu</a></li>
-                <li><a href="#">Spécials</a></li>
-                <li><a href="#">Commander</a></li>
-                <li><a href="#">Restaurant</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="special.html">Spécials</a></li>
+                <li><a href="rejoigner-nous.html">Rejoignez Nous!</a></li>
+                <li><a href="inscription.html">Inscrivez Vous!</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <!-- Le contenue Principal -->
-        <h1>Bienvenue au Restaurant LE</h1>
+        <!-- Main content goes here -->
+        <h1>Bienvenue au Restaurant L'Expérience</h1>
         <img src="https://tse2.mm.bing.net/th?id=OIP.bXx32dwx1ruMXzlUKJquAQHaE8&pid=Api&P=0&h=180" alt="Restaurant View">
         <p>Découvrez nos plats et saveurs uniques.</p>
-        
+        <!-- Add more content here -->
+        <div class="division"></div>
     </main>
     <footer>
-        &copy; 2023 Luccin Eric
+        <p>L'Expérience Novembre 2023</p>
+        <p><a href="https://github.com/eric4231/Projet-UA2.git">Lien vers le Git</a></p>
+        
+        &copy; L'Expérience 2023 Luccin Eric mamadou
     </footer>
 </body>
 </html>
