--- a/inscription.html
+++ b/inscription.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inscription - L'Expérience</title>
+    <link rel="icon" type="image/png" href="https://static.showit.co/800/cKPQwZkpQmeo1WHUOQ-sxQ/55130/lf_logo_monogram_simple.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -18,9 +19,10 @@
         <nav>
             <ul>
                 <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="notrehistoire.html">Notre Histoire</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="special.html">Spécials</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="rejoigner-nous.html">Rejoignez Nous!</a></li>
                 <li><a href="inscription.html">Inscrivez Vous!</a></li>
             </ul>
         </nav>
@@ -28,11 +30,67 @@
     </header>
 
     <main>
+        <h1>Inscrivez vous!</h1>
+        <form class="inscription">
+            <div>
+                <label class="label_ins" for="email">Email</label>
+            </div>
 
+            <div>
+                <input class="input_ins" name="email" type="text">
+            </div>
+
+            <div>
+                <label class="label_ins" for="remail">Retappez votre email</label>
+            </div>
+
+            <div>
+                <input class="input_ins" name="remail" type="text">
+            </div>
+
+            <div>
+                <label class="label_ins" for="mdp">Mot de passe</label>
+            </div>
+
+            <div>
+                <input class="input_ins" type="text" name="mdp">
+            </div>
+
+            <div>
+                <label class="label_ins" for="rmdp">Retappez votre mot de passe</label>
+            </div>
+
+            <div>
+                <input class="input_ins" type="text" name="rmdp">
+            </div>
+
+            <div>
+                <label class="label_ins" for="nom">Nom</label>
+            </div>
+
+            <div>
+                <input class="input_ins" type="text" name="nom">
+            </div>
+
+            <div>
+                <label class="label_ins" for="prenom">Prenom</label>
+            </div>
+
+            <div>
+                <input class="input_ins" type="text" name="prenom">
+            </div>
+
+            <button>Enregistrer</button>
+
+        </form>
+        <div class="division"></div>
     </main>
 
     <footer>
-        &copy; L'Expérience 2023 Luccin Eric
+        <p>L'Expérience Novembre 2023</p>
+        <p><a href="https://github.com/eric4231/Projet-UA2.git">Lien vers le Git</a></p>
+        
+        &copy; L'Expérience 2023 Luccin Eric mamadou
     </footer>
 
 </body>
