--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu - Nom du Restaurant</title>
+    <link rel="icon" type="image/png" href="https://static.showit.co/800/cKPQwZkpQmeo1WHUOQ-sxQ/55130/lf_logo_monogram_simple.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/Style.css">
     <style>
@@ -21,11 +22,11 @@
         <nav>
             <ul>
                 <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="notrehistoire.html">Notre Histoire</a></li>
                 <li><a href="menu.html">Menu</a></li>
-                <li><a href="#">Spécials</a></li>
-                <li><a href="#">Commander</a></li>
-                <li><a href="#">Restaurant</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="special.html">Spécials</a></li>
+                <li><a href="rejoigner-nous.html">Rejoignez Nous!</a></li>
+                <li><a href="inscription.html">Inscrivez Vous!</a></li>
             </ul>
         </nav>
     </header>
@@ -135,11 +136,16 @@
             </tr>
 
         </table>
+        <div class="division"></div>
     </main>
 
     <footer>
-        &copy; nom du restaurant
+        <p>L'Expérience Novembre 2023</p>
+        <p><a href="https://github.com/eric4231/Projet-UA2.git">Lien vers le Git</a></p>
+        
+        &copy; L'Expérience 2023 Luccin Eric mamadou
     </footer>
 
 </body>
+</html>
 </html>
