--- a/special.html
+++ b/special.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spécial - L'Expérience</title>
+    <link rel="icon" type="image/png" href="https://static.showit.co/800/cKPQwZkpQmeo1WHUOQ-sxQ/55130/lf_logo_monogram_simple.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -17,9 +18,10 @@
         <nav>
             <ul>
                 <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="notrehistoire.html">Notre Histoire</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="special.html">Spécials</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="rejoigner-nous.html">Rejoignez Nous!</a></li>
                 <li><a href="inscription.html">Inscrivez Vous!</a></li>
             </ul>
         </nav>
@@ -34,11 +36,15 @@
         <h2 class="sous_titre_special">Le Fillet Mignon</h2>
 
         <p>15 onces de la coupe la plus tendre du bétail avec un accompagnement de votre choix.</p>
+        <div class="division"></div>
 
     </main>
 
     <footer>
-        &copy; L'Expérience 2023 Luccin Eric
+        <p>L'Expérience Novembre 2023</p>
+        <p><a href="https://github.com/eric4231/Projet-UA2.git">Lien vers le Git</a></p>
+        
+        &copy; L'Expérience 2023 Luccin Eric mamadou
     </footer>
 
 </body>
