modification générale sur les pages rejoignez-nous et notreHistoire

--- a/special.html
+++ b/special.html
@@ -21,7 +21,7 @@
                 <li><a href="notrehistoire.html">Notre Histoire</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="special.html">Spécials</a></li>
-                <li><a href="rejoigner-nous.html">Rejoignez Nous!</a></li>
+                <li><a href="Rejoignez-nous.html">Rejoignez Nous!</a></li>
                 <li><a href="inscription.html">Inscrivez Vous!</a></li>
             </ul>
         </nav>
