--- a/notreHistoire.html
+++ b/notreHistoire.html
@@ -4,35 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hitoirre Restaurant LS</title>
-    <link rel="icon" type="image/png" href="https://static.showit.co/800/cKPQwZkpQmeo1WHUOQ-sxQ/55130/lf_logo_monogram_simple.png">
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
+        <!-- Logo -->
         <div>
             <a href="accueil.html"><img src="https://static.showit.co/800/cKPQwZkpQmeo1WHUOQ-sxQ/55130/lf_logo_monogram_simple.png" alt="Logo du restaurant"></a>
         </div>
-
+        <!-- Navigation -->
         <nav>
             <ul>
                 <li><a href="accueil.html">Accueil</a></li>
                 <li><a href="notrehistoire.html">Notre Histoire</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="special.html">Spécials</a></li>
-                <li><a href="rejoigner-nous.html">Rejoignez Nous!</a></li>
+                <li><a href="Rejoignez-nous.html">Rejoignez Nous!</a></li>
                 <li><a href="inscription.html">Inscrivez Vous!</a></li>
             </ul>
         </nav>
-
     </header>
     <main>
         <div class="separtion-histoire">
         </div>
     <div class="histoire-part1">
 
-        <div class="clsHistoire-partie-gauche"  >
-            <img src="images/hamburger.jpg" alt="hamburger">
+        <div class="clsHistoire-partie-gauche" >
+    
         </div>
         <div class="cls-partie-droite">
             <div class="clsHistoire">
@@ -42,9 +41,9 @@
 
                 <div class="mesTextes">
                     <p>
-                        Nous sommes un véritable enchantement pour les amateurs de bonne cuisine. Avec son design 
+                        Nous sommes  est un véritable enchantement pour les amateurs de bonne cuisine. Avec son design 
                         élégant et convivial, nous vous invite à découvrir un menu raffiné et des 
-                        plats savoureux. Vous pourrez également réservez une table en ligne et
+                        plats savoureux. Vous pourrez également réserver une table en ligne et
                         consulter les avis des clients satisfaits. Ne manquez pas de visiter ce 
                         site pour une expérience culinaire magique 
                     </p>
@@ -67,13 +66,6 @@
     </div>
     <div class="separtion-histoire">
     </div>
-    <div class="division"></div>
     </main>
-    <footer>
-        <p>L'Expérience Novembre 2023</p>
-        <p><a href="https://github.com/eric4231/Projet-UA2.git">Lien vers le Git</a></p>
-        
-        &copy; L'Expérience 2023 Luccin Eric mamadou
-    </footer>
 </body>
 </html>
