Update Rejoignez-nous.html footer

--- a/Rejoignez-nous.html
+++ b/Rejoignez-nous.html
@@ -90,6 +90,13 @@
         <div class="mesAutres-pages"> <form action="special.html" target="_blank"><button>Specials</button></form></div>
     </div>
     <div class="ligne-seperation"></div>
+
+    <footer>
+        <p>L'Expérience Novembre 2023</p>
+        <p><a href="https://github.com/eric4231/Projet-UA2.git">Lien vers le Git</a></p>
+        
+        &copy; L'Expérience 2023 Luccin Eric mamadou
+    </footer>
   
 </body>
 </html>
