Update notreHistoire.html footer

--- a/notreHistoire.html
+++ b/notreHistoire.html
@@ -67,5 +67,13 @@
     <div class="separtion-histoire">
     </div>
     </main>
+
+    <footer>
+        <p>L'Expérience Novembre 2023</p>
+        <p><a href="https://github.com/eric4231/Projet-UA2.git">Lien vers le Git</a></p>
+        
+        &copy; L'Expérience 2023 Luccin Eric mamadou
+    </footer>
+    
 </body>
 </html>
